change size of hamburger navbar to avoid too much whitespace on phone screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3092,16 +3092,16 @@ body.homepage.is-preload #header:after {
     -webkit-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     backface-visibility: hidden;
-    -moz-transform: translateY(-50vh);
-    -webkit-transform: translateY(-50vh);
-    -ms-transform: translateY(-50vh);
-    transform: translateY(-50vh);
+    -moz-transform: translateY(-37vh);
+    -webkit-transform: translateY(-37vh);
+    -ms-transform: translateY(-37vh);
+    transform: translateY(-37vh);
     -moz-transition: -moz-transform 0.5s ease;
     -webkit-transition: -webkit-transform 0.5s ease;
     -ms-transition: -ms-transform 0.5s ease;
     transition: transform 0.5s ease;
     display: block;
-    height: 50vh;
+    height: 37vh;
     left: 0;
     overflow-y: auto;
     position: fixed;
@@ -3121,7 +3121,6 @@ body.homepage.is-preload #header:after {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url('images/overlay.png');
     background-size: 128px 128px;
   }
 
@@ -3175,17 +3174,17 @@ body.homepage.is-preload #header:after {
   }
 
   body.navPanel-visible #page-wrapper {
-    -moz-transform: translateY(50vh);
-    -webkit-transform: translateY(50vh);
-    -ms-transform: translateY(50vh);
-    transform: translateY(50vh);
+    -moz-transform: translateY(37vh);
+    -webkit-transform: translateY(37vh);
+    -ms-transform: translateY(37vh);
+    transform: translateY(37vh);
   }
 
   body.navPanel-visible #navButton {
-    -moz-transform: translateY(50vh);
-    -webkit-transform: translateY(50vh);
-    -ms-transform: translateY(50vh);
-    transform: translateY(50vh);
+    -moz-transform: translateY(37vh);
+    -webkit-transform: translateY(37vh);
+    -ms-transform: translateY(37vh);
+    transform: translateY(37vh);
   }
 
   body.navPanel-visible #navPanel {
